@@ -1,3 +1,9 @@
+2009-05-30
+    * Spanish help file translated.
+
+2009-05-28
+    * Bender returns to zero when released
+
 2009-05-26
     * Dialogs: help "WhatIsThis?" strings, layouts
     * updated spanish translation  
@@ -14,7 +20,7 @@
 
 2009-04-05
     * release 0.2.4
-    
+
 2009-02-08
     * merged RtMIDI 1.0.8
     * overhauled preferences: removed channels, velocity, base octave 
